--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -599,18 +599,18 @@ relic using:
 	\langle v_{SE relic} \rangle^j = \beta~v^j_{3D}(t_{\rm per}) \frac{m^j_{NW}}{m^j_{SE} + m^j_{NW}}. 
 \end{equation}
 \par 
-To come up with the most likely range of $\beta$, we refer to the
+For the most likely range of $\beta$, we refer to the
 simulations of cluster mergers by both \cite{Springel2007} and
 \cite{Paul2011b} since those are some of the few simulations available that
 quote shock propagation speeds in the center-of-mass frame of the cluster,
-and not the ICM frame. 
+and in not the ICM frame. 
 The simulation of the Bullet Cluster by \cite{Springel2007}, 
 indicates that the propagation velocity of the shock evolves such that $\beta \approx 0.95$ within
 $\sim 0.4~\giga$yr after the pericenter. For the analysis of El Gordo,
 we suggest $\beta \approx 0.9$ to be the most likely value given that the $TSP$ of
 El Gordo is longer. 
 To include the possible range of valid $\beta$ values,
-We examined $0.7 \leq \beta \leq 1.5$. This range of $\beta \approx 1$ allows us to use  
+we examined $0.7 \leq \beta \leq 1.5$. This range of $\beta \approx 1$ allows us to use  
 equations \ref{eqn:NW_speed} and \ref{eqn:SE_speed} to reflect that the
 shock is driven by the merger. We note that the propagation speed of the
 shock is also determined by the temperature, density and other details of
@@ -621,7 +621,10 @@ merging clusters (Merger F) with $\beta \approx 2.0$ has been reported by the co
 simulations in \citealt{Paul2011b}. 
 However, we note that Merger F from \citealt{Paul2011b} has a lower mass of
 $\sim 1.1 \times 10^{14} M_{\sun}$ in total, and that the time resolution
-of 0.6 Gyr is lower than the one in \cite{Springel2007}. We therefore
+of 0.6 Gyr is lower than the one in \cite{Springel2007}.
+The low time resolution from \citealt{Paul2011b} may underestimate the
+pericenter velocity and overestimate $\beta$.
+We therefore
 suggest a most likely range, closer to the value of $\beta$ inferred from
 \cite{Springel2007}, as $0.7 \leq \beta \leq 1.5$.
 In section \ref{sec:merger_scenario}, we demonstrate that $\beta$ has to be
